# mhf

./: .gitignore  README.md  etl.ipynb  etl.py  pyproject.toml  utils.py
artifacts/data/: original.json  sft_test.json  sft_train.json  sft_val.json  sft_valid.json
data/: sft.json
src/: api.py  app.py  eda.ipynb  etl.ipynb  etl.py  eval.py  load_test.py  locustfile.py  quantize.py  train.py  utils.py
