[project]
name = "mho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gimpformats>=2024",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "modal>=0.73.24",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
