[project]
name = "mhf"
version = "0.1.0"
description = "MHF Automated Labelling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.16.0,<=3.2.0",
    "fastapi>=0.115.8",
    "gimpformats>=2024",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "locust>=2.33.0",
    "matplotlib>=3.10.0",
    "modal>=0.73.24",
    "more-itertools>=10.6.0",
    "opencv-python>=4.11.0.86",
    "packaging>=24.2",
    "pillow>=10.4.0",
    "pre-commit>=4.5.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-fasthtml>=0.12.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "simpleicons>=7.21.0",
    "starlette>=0.45.3",
    "tqdm>=4.67.1",
    "transformers",
    "wandb>=0.19.6",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
gpu = [
    "accelerate>=0.34.0,<=1.2.1",
    "deepspeed>=0.16.3",
    "flash-attn>=2.7.4.post1",
    "ninja>=1.11.1.3",
    "torch>=2.5.1",
    "vllm>=0.7.2",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "9985d06add07a4cc691dc54a7e34f54205c04d40" }
